--- a/templates/career-advisor.html
+++ b/templates/career-advisor.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="/static/style.css">
     <link rel="icon" href="/static/favicon.ico" type="image/x-icon"> <!-- Link to your favicon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <title>AI Career Advisor Platform - Chatbot</title>
+    <title>AI Career Advisor Platform - Career Advisor</title>
     <style>
     </style>
 </head>
@@ -35,7 +35,7 @@
         </nav>
 
     <div class="content text-center">
-        <h1>Talk to Our Chatbot!</h1>
+        <h1>Talk to Our Career Advisor Bot!</h1>
         <p class="text-center">The chatbot is only currently tailored to give its best career advice based upon the information you give. It is only advice and not instructing you to do anything against your will.</p>
     </div>
 
