--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
     <nav class="sidebar" id="sidebar">
         <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="/form">Career Advisor Form</a></li>
+            <!-- <li><a href="/form">Career Advisor Form</a></li> -->
             <li><a href="/career-advisor">Career Advisor Bot</a></li>
             <li><a href="/chatbot">Chatbot</a></li>
             <li><a href="/contact">Contact Us</a></li>
@@ -41,11 +41,11 @@
             
             <div id="options" class="fade-in" style="display: none;"> <!-- Hidden by default -->
                 <h2 class="mb-4">Not Sure Where to Start?</h2>
-                <button class="btn btn-primary mb-3 w-30" onclick="window.location.href='/profile_create.html'">Create a Profile!</button>
+                <button class="btn btn-primary mb-3 w-20" onclick="window.location.href='/profile_create.html'">Create a Profile!</button>
             </div>
         </div>
     </div>    
     
-    <script src="/static/script.js"></script>
+    <script src="/static/index.js"></script>
 </body>
 </html>
