--- a/templates/chatbot.html
+++ b/templates/chatbot.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/static/style.css">
-    <link rel="icon" href="/static/favicon.ico" type="image/x-icon"> <!-- Link to your favicon -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="icon" href="/static/favicon.ico" type="image/x-icon"> <!-- Link to your favicon -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <title>AI Career Advisor Platform - Chatbot</title>
-    <style>
-    </style>
 </head>
 <body>
     <header>
@@ -27,7 +26,7 @@
         <nav class="sidebar" id="sidebar">
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/form">Career Advisor Form</a></li>
+                <!-- <li><a href="/form">Career Advisor Form</a></li> -->
                 <li><a href="/career-advisor">Career Advisor Bot</a></li>
                 <li><a href="/chatbot">Chatbot</a></li>
                 <li><a href="/contact">Contact Us</a></li>
@@ -45,6 +44,6 @@
         <button id="send-button">Send</button>
     </div>
 
-    <script src="/static/script.js"></script>
+    <script src="/static/chatbot.js"></script>
 </body>
 </html>
