--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
         <nav class="sidebar" id="sidebar">
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/form">Career Advisor Form</a></li>
+                <!-- <li><a href="/form">Career Advisor Form</a></li> -->
                 <li><a href="/career-advisor">Career Advisor Bot</a></li>
                 <li><a href="/chatbot">Chatbot</a></li>
                 <li><a href="/contact">Contact Us</a></li>
@@ -57,6 +57,6 @@
         <p class="text-center italic info">We do not use, store and or sell your personal and course details.</p>
     </div>
 
-    <script src="/static/script.js"></script>
+    <script src="/static/index.js"></script>
 </body>
 </html>
