--- a/templates/contact.html
+++ b/templates/contact.html
@@ -26,7 +26,7 @@
     <nav class="sidebar" id="sidebar">
         <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="/form">Career Advisor Form</a></li>
+            <!-- <li><a href="/form">Career Advisor Form</a></li> -->
             <li><a href="/career-advisor">Career Advisor Bot</a></li>
             <li><a href="/chatbot">Chatbot</a></li>
             <li><a href="/contact">Contact Us</a></li>
@@ -60,7 +60,7 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="/static/script.js"></script>
+    <script src="/static/index.js"></script>
 
 </body>
 </html>
