--- a/templates/profile.html
+++ b/templates/profile.html
@@ -15,6 +15,9 @@
             &#9776; <!-- Hamburger icon -->
         </div>
     
+        <!-- Username display -->
+        <span id="username-display" class="username-display"></span>
+    
         <div class="profile-icon">
             <a href="/profile_create">
                 <i class="fas fa-user-circle"></i>
@@ -25,59 +28,28 @@
     <nav class="sidebar" id="sidebar">
         <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="/form">Career Advisor Form</a></li>
+            <!-- <li><a href="/form">Career Advisor Form</a></li> -->
             <li><a href="/career-advisor">Career Advisor Bot</a></li>
             <li><a href="/chatbot">Chatbot</a></li>
             <li><a href="/contact">Contact Us</a></li>
         </ul>
     </nav>
 
-    <div class="mt-3" id="app">
+    <div class="mt-3 container" id="app">
         <h1 id="welcome-message">Welcome, <span id="username"></span>!</h1>
-        
         <!-- Profile Details Section -->
         <div id="profile-details" class="mt-4">
           <h2>Your Profile Details:</h2>
+          <div id="profile-details-content">
           <p><strong>Name:</strong> <span id="profile-name"></span></p>
           <p><strong>Email:</strong> <span id="profile-email"></span></p>
           <p><strong>Username:</strong> <span id="username"></span></p>
-          <button id="logoutButton">Logout</button>
+          <p><strong>Password:</strong> <span id="password"></span></p>
+          </div>
+          <button class="btn btn-danger" id="logoutButton">Logout</button>
         </div>
       </div>
       
-      <script type="module">
-document.addEventListener('DOMContentLoaded', async () => {
-  const userData = JSON.parse(sessionStorage.getItem('userData'));
-  if (userData) {
-    console.log('User data:', userData);
-
-    // Query the Supabase database to retrieve the user's data
-const { createClient } = supabase
-const supabaseUrl = 'https://ynqfcsnmekopstlkgadm.supabase.co';
-const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InlucWZjc25tZWtvcHN0bGtnYWRtIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MjkxMDA0MjUsImV4cCI6MjA0NDY3NjQyNX0.Rg6_lUSTkGOec-cm7UQzikTFcBf57qqKFWxW59rznpg';
-const supabase = createClient(supabaseUrl, supabaseKey);
-    const { data, error } = await supabase
-      .from('users')
-      .select('name, email, username')
-      .eq('email', userData.email);
-
-    if (error) {
-      console.error('Error retrieving user data:', error);
-    } else {
-      const user = data[0];
-      console.log('User data from database:', user);
-
-      // Update the page with the user data
-      document.getElementById('welcome-message').innerHTML = `Welcome, ${user.username}!`;
-      document.getElementById('profile-name').innerHTML = user.name;
-      document.getElementById('profile-email').innerHTML = user.email;
-      document.getElementById('username').innerHTML = user.username;
-    }
-  } else {
-    // User is not logged in, redirect to login page
-    window.location.href = '/login';
-  }
-});
-      </script>
+      <script src="/static/profile_page.js"></script>
 </body>
 </html>
