--- a/templates/profile_create.html
+++ b/templates/profile_create.html
@@ -26,7 +26,7 @@
         <nav class="sidebar" id="sidebar">
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/form">Career Advisor Form</a></li>
+                <!-- <li><a href="/form">Career Advisor Form</a></li> -->
                 <li><a href="/career-advisor">Career Advisor Bot</a></li>
                 <li><a href="/chatbot">Chatbot</a></li>
                 <li><a href="/contact">Contact Us</a></li>
@@ -53,6 +53,9 @@
                 
                 <button class="btn btn-primary mt-3" type="submit">Create Profile</button>
             </form>
+        </div>
+        <div class="mt-3">
+            <p>Already have an account? <a href="/login" class="link">Log in here</a>.</p>
         </div>
     </div>
     
