--- a/templates/profile_login.html
+++ b/templates/profile_login.html
@@ -26,7 +26,7 @@
         <nav class="sidebar" id="sidebar">
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/form">Career Advisor Form</a></li>
+                <!-- <li><a href="/form">Career Advisor Form</a></li> -->
                 <li><a href="/career-advisor">Career Advisor Bot</a></li>
                 <li><a href="/chatbot">Chatbot</a></li>
                 <li><a href="/contact">Contact Us</a></li>
