--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
             
             <div id="options" class="fade-in" style="display: none;"> <!-- Hidden by default -->
                 <h2 class="mb-4">Not Sure Where to Start?</h2>
-                <button class="btn btn-primary mb-3 w-20" onclick="window.location.href='/profile_create.html'">Create a Profile!</button>
+                <button class="btn btn-primary mb-3 w-20" onclick="window.location.href='/profile_create'">Create a Profile!</button>
             </div>
         </div>
     </div>    
