--- a/templates/contact.html
+++ b/templates/contact.html
@@ -63,4 +63,7 @@
     <script src="/static/index.js"></script>
 
 </body>
+<footer>
+    <p>&copy; 2024 AI Career Advisor - Powered by Onesite Designs</p>
+  </footer>
 </html>
