--- a/templates/profile.html
+++ b/templates/profile.html
@@ -52,4 +52,7 @@
       
       <script src="/static/profile_page.js"></script>
 </body>
+<footer>
+    <p>&copy; 2024 AI Career Advisor - Powered by Onesite Designs</p>
+  </footer>
 </html>
