--- a/templates/profile_create.html
+++ b/templates/profile_create.html
@@ -61,4 +61,7 @@
     
     <script src="/static/script.js"></script>
 </body>
+<footer>
+    <p>&copy; 2024 AI Career Advisor - Powered by Onesite Designs</p>
+  </footer>
 </html>
