--- a/templates/profile_login.html
+++ b/templates/profile_login.html
@@ -54,4 +54,7 @@
     <script type="module" src="/static/login.js"></script>
     
 </body>
+<footer>
+    <p>&copy; 2024 AI Career Advisor - Powered by Onesite Designs</p>
+  </footer>
 </html>
