--- a/templates/career-advisor.html
+++ b/templates/career-advisor.html
@@ -48,4 +48,7 @@
 
     <script src="/static/career-chatbot.js"></script>
 </body>
+<footer>
+    <p>&copy; 2024 AI Career Advisor - Powered by Onesite Designs</p>
+  </footer>
 </html>
