--- a/templates/chatbot.html
+++ b/templates/chatbot.html
@@ -46,4 +46,7 @@
 
     <script src="/static/chatbot.js"></script>
 </body>
+<footer>
+    <p>&copy; 2024 AI Career Advisor - Powered by Onesite Designs</p>
+  </footer>
 </html>
